--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,20 @@
 
 html, body, #root {
     height: 100%;
-    user-select: none;
+    user-select: none; /* Standart */
+    -webkit-user-select: none; /* Safari/Chrome */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Eski IE/Edge */
 }
 
 body {
     margin: 0;
     background: var(--bg);
     color: var(--text);
+    user-select: none; /* Standart */
+    -webkit-user-select: none; /* Safari/Chrome */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Eski IE/Edge */
     font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
 }
 
@@ -32,6 +39,10 @@ body {
     padding: 12px 16px 96px;
     max-width: 960px;
     margin: 0 auto;
+    user-select: none; /* Standart */
+    -webkit-user-select: none; /* Safari/Chrome */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Eski IE/Edge */
 }
 
 .header {
